# license_server_client_cyber_range

./: CMakeLists.txt  README.md  activation_db.c  activation_db.h  common.h  crypto_utils.c  license_client.c  license_client.h  license_server.c  test1.c  verify_sav.c  verify_sav.h
